# mediasoup

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  eslint.config.mjs  jest.config.mjs  knip.config.mjs  npm-scripts.mjs  package-lock.json  package.json  rust-scripts.mjs  tsconfig.json
.github/ISSUE_TEMPLATE/: Bug_Report.md  Feature_Request.md
.github/workflows/: codeql-config.yaml  codeql.yaml  mediasoup-codeql.yaml  mediasoup-crate-publish.yaml  mediasoup-demo-update.yaml  mediasoup-node.yaml  mediasoup-npm-publish.yaml  mediasoup-rust.yaml  mediasoup-website-publish.yaml  mediasoup-website-update.yaml  mediasoup-worker-clang-tidy.yaml  mediasoup-worker-fuzzer.yaml  mediasoup-worker-prebuild.yaml  mediasoup-worker.yaml
doc/: Building.md  Fuzzer.md  README.md  Rust-crates.md
node/src/: ActiveSpeakerObserver.ts  ActiveSpeakerObserverTypes.ts  AudioLevelObserver.ts  AudioLevelObserverTypes.ts  Channel.ts  Consumer.ts  ConsumerTypes.ts  DataConsumer.ts  DataConsumerTypes.ts  DataProducer.ts  DataProducerTypes.ts  DirectTransport.ts  DirectTransportTypes.ts  Logger.ts  PipeTransport.ts  PipeTransportTypes.ts  PlainTransport.ts  PlainTransportTypes.ts  Producer.ts  ProducerTypes.ts  Router.ts  RouterTypes.ts  Transport.ts  TransportTypes.ts  WebRtcServer.ts  WebRtcServerTypes.ts  Worker.ts  (+17 more)
rust/: CHANGELOG.md  Cargo.toml
rust/types/: CHANGELOG.md  Cargo.toml  README.md
rust/types/src/: data_structures.rs  lib.rs  rtp_parameters.rs  scalability_modes.rs  sctp_parameters.rs  srtp_parameters.rs
worker/: .clang-format  .clang-tidy  .clangd  Cargo.toml  Dockerfile  Dockerfile.386  Dockerfile.alpine  build.rs  meson.build  ruff.toml  tasks.py  ubsan_suppressions.txt
(+679 files in other folders)
