[package]
name = "mediasoup-types"
version = "0.2.1"
description = "Type definitions and shared data structures for the mediasoup crate"
authors = [
    "Nazar Mokrynskyi <nazar@mokrynskyi.com>",
    "José Luis Millán <jmillan@aliax.net>",
    "Iñaki Baz Castillo <ibc@aliax.net>"
]
edition = "2021"
license = "ISC"
documentation = "https://docs.rs/mediasoup-types"
repository = "https://github.com/versatica/mediasoup"
readme = "README.md"

[dependencies]
once_cell = "1.16.0"
serde_json = "1.0.87"
thiserror = "2.0.12"

[dependencies.serde]
features = ["derive"]
version = "1.0.190"

[dependencies.regex]
default-features = false
features = ["std", "perf"]
version = "1.6.0"
